# Diablo IV Collection Log

A web app that allows Diablo IV players keep track of their Transmog
collections.

## [Unreleased]

## [1.2.1] - 2023-02-09

### Added Select All / None actions to collections

## [1.2.0] - 2023-02-08

### Added

- Account logins using Google.
- Sync collections to server when logged in.
- Navigation hamburger menu (mobile).
- Close button and heading to the settings screen (mobile).
- Card layout and extra display options (mobile).
- Lunar Awakening Event collection.
- Body Markings item category filter.

### Changed

- Set default "Show Hidden Items" value to disabled.
- Increased width of header to run fullscreen (desktop).
- Moved progress bar from the footer to the header (desktop).

### Fixed

- Settings clipping on small screens (mobile).

## [1.1.4] - 2023-01-25

### Added

- Filter to hide complete collections (including header).

### Changed

- Renamed filter and display settings to make their purpose clearer.

## [1.1.3] - 2023-01-24

### Added

- Season of the Construct collection with Battle Pass items.
- Zir's Bloody Skull and Varshan's Severed Head to respective season
  collections.

### Changed

- Marked Season of Blood collection as out of rotation.

## [1.1.2] - 2023-01-23

### Added

- Remember collection open/closed state.
- Remember last selected item.

### Changed

- Moved Discord link and site info from footer to sidebar (xl).
- Set "Show Premium", "Promotional", "Out of Rotation" filters to off by
  default.

### Fixed

- Overall percentage text squashed on small screens.
- Sidebar to overflow correctly.

## [1.1.1] - 2023-01-22

### Added

- Overall percentage to progress bar.
- Analytics for usage/visitation visibility.

### Changed

- Style and layout of the site footer.

### Fixed

- Expired discord invite, replaced with permalink.

## [1.1.0] - 2023-01-21

### Added

- Missing "Sturdy Saddle" horse armor from Vendor collection.
- Filter to show/hide collected items.